# agentic_bi_system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  RESEARCH.md  docker-compose.yml  package-lock.json  package.json  test_all_integration.py  z_FLOWS.md  z_memory.md  z_write.md
app/: .dockerignore  .env.template  CHAT_README.md  README.app.md  README.md  README.workflow.md  __init__.py  chat.py  chat2.py  chat_enhanced.py  chat_with_phases.py  config.py  config.py.backup  example_usage.py  init_lancedb.py  logging_config.json  main.py  mcp.json  mcp_server_proposal.md  monitoring_config.json  pyproject.toml  server.py  test_architecture.py  test_orchestrator.py  test_orchestrator_final.py
app/analytics/: __init__.py  anomaly_detector.py  correlation_engine.py  forecaster.py  scenario_modeler.py  trend_analyzer.py
app/api/: __init__.py  app_factory.py  websocket.py
app/bridge/: __init__.py  service_bridge.py
app/cache/: __init__.py  anthropic_cache.py  cache_logging.py  cache_manager.py  cache_warming.py  postgresql_cache.py  semantic_cache.py  ttl_manager.py
app/cli/: README.md  __init__.py  chat.py
app/collaboration/: __init__.py  expertise_router.py  feedback_processor.py  knowledge_synthesizer.py  morning_cache_warmer.py  real_time_sharing.py  team_patterns.py
app/config/: __init__.py  cfg_databases.py  cfg_infrastructure.py  cfg_intelligence.py  cfg_security.py
app/core/: README.context.md  README.md  __init__.py  agent.py  agentic_bi_flow.py  business_analyst.py  error_handling.py  investigation.py  investigation_engine.py  memory.py  planner.py  query_processor.py  strategy_planner.py  test_integration.py  workflow.py
app/database/: __init__.py  connections.py  memory_manager.py  models.py  operations.py
app/embedded_model/: __init__.py  config.py  model_logging.py  runner.py
app/fastapi/: app_factory.py  dependencies.py
app/fastmcp/: __init__.py  client_manager.py  client_manager_fixed.py  direct_db_manager.py  enhanced_service_methods.py  graphrag_client.py  mariadb_client.py  postgres_client.py  qdrant_client.py  service.py  service_enhanced.py  supabase_client.py
app/graphrag/: README.md  __init__.py  config.py  graphrag_server.py  mcp_server.py  models.py
app/guardrails/: __init__.py  business_validator.py  compliance_checker.py  quality_enforcer.py  query_guard.py  rate_limiter.py  result_validator.py  sql_validator.py
app/insight_synthesis/: README.context.md  README.md  __init__.py  config.py  runner.py  synthesis_logging.py  test_standalone.py  test_vector_enhanced_synthesizer.py  test_vector_synthesizer_standalone.py  vector_enhanced_insight_synthesizer.py  vector_enhanced_insight_synthesizer_enhanced.py
app/intelligence/: INTEGRATION_STATUS.md  README.context.md  README.md  __init__.py  business_context.py  complexity_analyzer.py  config.py  domain_expert.py  embedding_service.py  example_mcp_usage.py  hypothesis_generator.py  integration_test.py  intelligence_logging.py  lancedb_pattern_recognizer.py  lancedb_pattern_recognizer_enhanced.py  methodology_selector.py  pattern_library.py  pattern_loader.py  pattern_recognizer.py  query_intent_classifier.py  response_templates.py  runner.py  simple_integration_test.py  test_full_integration.py  test_full_integration_fixed.py  test_integration_demo.py  test_lancedb_pattern_recognizer.py  test_standalone.py  test_vector_enhanced_complexity_analyzer.py  test_vector_enhanced_domain_expert.py  vector_enhanced_complexity_analyzer.py  vector_enhanced_domain_expert.py
app/investigation/: README.context.md  README.md  config.py  investigation_logging.py  prompts.py  runner.py  test_standalone.py  test_vector_enhanced_investigator.py  vector_enhanced_investigator.py
app/lance_db/: .gitignore  INTEGRATION_COMPLETE.md  QUICKSTART_GUIDE.md  README.context.md  README.md  VECTOR_INTEGRATION_DIAGRAM.md  __init__.py  config.py  embedding_component.py  enhanced_schema.py  exported_moq_template.json  ingest_moq.py  ingest_patterns.py  runner.py  (+6 more)
(+225 files in other folders)
